--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,4 @@
+/* https://colorhunt.co/palette/222831393e46ffd369eeeeee */
 .container {
   padding: 0 2rem;
 }
@@ -29,7 +30,8 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #ffd369;
+  /* color: #0070f3; */
   text-decoration: none;
 }
 
@@ -43,6 +45,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  color: EEEEEE;
 }
 
 .title,
@@ -70,7 +73,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 1200px;
 }
 
 .card {
@@ -79,17 +82,19 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #ffd369;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+  width: 100%;
   max-width: 300px;
+  background-color: #393e46;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #ffd369;
+  border-color: #ffd369;
 }
 
 .card h2 {
